# slack-mpm

./: .env.local.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_STRUCTURE.md  DEVELOPER.md  Makefile  README.md  mypy.ini  pyproject.toml
.claude-mpm/: PM_INSTRUCTIONS.md  message_check_state.json  pm_skills_registry.yaml
.claude-mpm/config/: project.json
.claude/agents/: .dependency_cache  .mpm_deployment_state
agents/: slack_archiver.py  slack_digest.py  slack_listener.py  slack_notifier.py  slack_responder.py
docs/research/: code-analysis-2026-03-10.md  credential-loading-analysis-2026-03-06.md
docs/specs/: SPEC-FILES-01-canvas-lists-delivery.md
src/slack_mcp/: __init__.py  __version__.py
src/slack_mcp/api/: __init__.py  _client.py  bookmarks.py  channels.py  files.py  messages.py  reminders.py  scheduled.py  users.py  workspace.py
src/slack_mcp/auth/: __init__.py  models.py  token_manager.py
src/slack_mcp/cli/: __init__.py  main.py
src/slack_mcp/server/: __init__.py  slack_mcp_server.py
src/slack_mpm/: __init__.py  __version__.py
src/slack_mpm/api/: __init__.py  _client.py  _pagination.py  bookmarks.py  canvases.py  channels.py  files.py  lists.py  messages.py  reminders.py  scheduled.py  users.py  workspace.py
src/slack_mpm/auth/: __init__.py  models.py  token_manager.py
src/slack_mpm/cli/: main.py
src/slack_mpm/content/: __init__.py  _markdown.py  canvas_converter.py  errors.py  list_converter.py
src/slack_mpm/server/: __init__.py  slack_mcp_server.py
tests/: conftest.py  test_auth.py  test_server.py
tests/api/: test_canvases.py  test_files.py  test_lists.py
tests/content/: test_canvas_converter.py  test_errors.py  test_list_converter.py
tests/server/: test_new_tools.py
